fix(css): hide version switch on tablet
- is visible on mobile once again
- reason for hide: navigation to wide

--- a/site/src/files/app/css/style.css
+++ b/site/src/files/app/css/style.css
@@ -194,8 +194,14 @@ footer {
 }
 
 @media (max-width: 979px) {
-  .navbar-brand.back-to-main {
-    display: none;
+  .navbar-right {
+    display: none;  
+  }
+}
+
+@media (max-width: 767px) {
+  .navbar-version {
+    display: block;
   }
 }
 
